# loma

./: .gitignore  README.md  environment.yml  environment_nocuda.yml  loma.py  pyproject.toml  run_fwsvd.py  utils.py
utils/: common.py  data.py  fwsvd.py
